# raspberry

./: .gitignore  README.md  bun.lockb  index.html  package.json  tailwind.config.js  turbo.json  vite.config.ts
.github/workflows/: release.yml
apps/goldie/: package.json
apps/goldie/src/: App.tsx  index.css  input.css
apps/goldie/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/goldie/src-tauri/src/: lib.rs  main.rs
apps/goldie/src-tauri/src/utils/: yt_downloader.rs
apps/goldie/src/api/: queryKeys.ts
apps/goldie/src/api/mutations/: usePlayNextSong.ts
apps/goldie/src/api/queries/: useKey.ts  usePlayback.ts  useQueue.ts  useRestart.ts
apps/goldie/src/api/sse/: useEventSource.ts
apps/goldie/src/components/splash/: component.tsx
apps/goldie/src/components/video-player/: component.tsx
goldie/: bun.lockb  package-lock.json  package.json  tsconfig.json
goldie/src/: App.tsx
goldie/src-tauri/: Cargo.toml
goldie/src-tauri/src/: lib.rs  main.rs  router.rs
goldie/src-tauri/src/actors/: video_downloader.rs
goldie/src/api/sse/: useEventSource.ts
src/api/: api-types.ts
src/api/queries/: useQueue.ts  useServerIp.ts
src/api/sse/: hooks.ts  types.ts
src/components/qr-code/: component.tsx
src/components/queue/: component.tsx
src/components/video-player/: index.tsx
tauri/: Cargo.toml  tauri.conf.json
tauri/icons/: icon.icns
